@@ -3,6 +3,8 @@
 changes in sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
   * optimization: faster out of line fixnum-float comparisons.
+  * optimization: filling a known simple-vector with a constant value
+    is about as fast in unoptimized code as in code compiled with (SPEED 3).
   * bug fix: correctly handle the case of a non-local exit within a function
     terminating the extent of dynamic-extent functions and variables in the
     presence of multiple-values (lp#1463127)
